--- a/sound/soc/apple/Makefile
+++ b/sound/soc/apple/Makefile
@@ -5,3 +5,13 @@ obj-$(CONFIG_SND_SOC_APPLE_MCA)	+= snd-soc-apple-mca.o
 snd-soc-macaudio-objs	:= macaudio.o
 
 obj-$(CONFIG_SND_SOC_APPLE_MACAUDIO)	+= snd-soc-macaudio.o
+
+snd-soc-apple-leap-objs	:= leap.o
+snd-soc-apple-leapshim-objs	:= leapshim.o
+
+obj-$(CONFIG_SND_SOC_APPLE_LEAP)	+= snd-soc-apple-leap.o \
+					snd-soc-apple-leapshim.o \
+					snd-soc-apple-leapmic.o
+
+snd-soc-apple-leapmic-objs	:= leapmic.o
+obj-$(CONFIG_SND_SOC_APPLE_LEAPMIC)	+= snd-soc-apple-leapmic.o
