--- a/arch/arm64/boot/dts/apple/t8103-j274.dts
+++ b/arch/arm64/boot/dts/apple/t8103-j274.dts
@@ -89,6 +89,13 @@
 };
 
 / {
+	dmic: audio-codec {
+		compatible = "dmic-codec";
+		num-channels = <3>;
+		wakeup-delay-ms = <30>;
+		#sound-dai-cells = <0>;
+	};
+
 	sound {
 		compatible = "apple,j274-macaudio", "apple,macaudio";
 		model = "Mac mini J274";
@@ -115,5 +122,17 @@
 			};
 		};
 
+		/* Fictitious -- for debugging of LEAP programming */
+		dai-link@2 {
+			compatible = "apple,j313-mic", "apple,experimental";
+			link-name = "Internal Mic";
+
+			cpu {
+				sound-dai = <&leap_pdm 1 0>, <&leap_pdm 2 0>;
+			};
+			codec {
+				sound-dai = <&dmic>;
+			};
+		};
 	};
 };
