--- a/arch/arm64/boot/dts/apple/t8103-j274.dts
+++ b/arch/arm64/boot/dts/apple/t8103-j274.dts
@@ -16,6 +16,10 @@
 	compatible = "apple,j274", "apple,t8103", "apple,arm-platform";
 	model = "Apple Mac mini (M1, 2020)";
 
+	chosen {
+		bootargs = "dyndbg=\"file sound/soc/soc-* +p; file sound/soc/apple/leap* +p;\"";
+	};
+
 	aliases {
 		ethernet0 = &ethernet0;
 	};
